--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
+    "@angular/material": "^20.2.11",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "chart.js": "^4.5.1",
